--- a/static/css/calculator.css
+++ b/static/css/calculator.css
@@ -18,7 +18,7 @@ body {
     flex: 2;
     background-color: #ffffff;
     border-radius: 15px;
-    padding: 30px;
+    padding: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     animation: fadeIn 1s ease-in-out;
 }
@@ -139,4 +139,11 @@ p.text-center {
     margin-bottom: 10px;
     color: #333;
     font-size: 1rem;
+}
+
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    gap: 15px;
+    margin-bottom: 20px;
 }
