--- a/templates/silver_calculator.html
+++ b/templates/silver_calculator.html
@@ -1,5 +1,5 @@
 {% extends "base/base.html" %}
-{% block title %} Silver Price Calculator {% endblock %}
+{% block title %}Silver Price Calculator{% endblock %}
 {% block styles %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/calculator.css') }}">
 {% endblock %}
@@ -19,19 +19,25 @@
                 <input type="number" id="purity" name="purity" step="0.1" max="100" min="0" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="price_per_gram">Price(per gm) (₹): <i class="fa-solid fa-weight-hanging"></i></label>
+                <label for="price_per_gram">Price (per gm) (₹): <i class="fa-solid fa-weight-hanging"></i></label>
                 <input type="number" id="price_per_gram" name="price_per_gram" step="0.01" class="form-control" value="{{ price_per_gram }}" required>
             </div>
-            <div class="form-group">
-                <label for="service_charge">Service Charge (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
-                <input type="number" id="service_charge" name="service_charge" step="0.1" value="{{ service_charge }}" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="tax">Tax (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
-                <input type="number" id="tax" name="tax" step="0.1" value="{{ tax }}" class="form-control">
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="service_charge">Service Charge (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
+                    <input type="number" id="service_charge" name="service_charge" step="0.1" value="{{ service_charge }}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="tax">Tax (%): <i class="fa-solid fa-file-invoice-dollar"></i></label>
+                    <input type="number" id="tax" name="tax" step="0.1" value="{{ tax }}" class="form-control">
+                </div>
             </div>
             <button type="submit" class="btn btn-hero btn-block mt-4">Generate Estimate Bill</button>
-            <a href="{{ url_for('history') }}" class="btn btn-hero mt-4">Previous History</a>
+            {% if current_user.is_authenticated %}
+                {% if current_user.user_level == 'admin' %}
+                    <a href="{{ url_for('history') }}" class="btn btn-hero mt-2">Previous History</a>
+                {% endif %}
+            {% endif %}
         </form>
     </div>
 
