--- a/templates/silver_calculator.html
+++ b/templates/silver_calculator.html
@@ -19,7 +19,7 @@
                 <input type="number" id="purity" name="purity" step="0.1" max="100" min="0" class="form-control" required>
             </div>
             <div class="form-group">
-                <label for="price_per_gram">Price (per gm) (₹): <i class="fa-solid fa-weight-hanging"></i></label>
+                <label for="price_per_gram">Price (per gm) {{ currency_symbol }}: <i class="fa-solid fa-weight-hanging"></i></label>
                 <input type="number" id="price_per_gram" name="price_per_gram" step="0.01" class="form-control" value="{{ price_per_gram }}" required>
             </div>
             <div class="form-row">
@@ -51,7 +51,7 @@
         <p><strong>Email:</strong> {{ config['JEWELLER_EMAIL'] }}</p>
         <p><strong>Website:</strong> {{ config['JEWELLER_WEBSITE'] }}</p>
         <p><strong>GSTIN:</strong> {{ config['JEWELLER_GSTIN'] }}</p>
-        <p><strong>Silver Rate (Per gm):</strong> ₹ {{ price_per_gram }}</p>
+        <p><strong>Silver Rate (Per gm):</strong> {{ currency_symbol }} {{ price_per_gram }}</p>
     </div>
 </div>
 {% endblock %}
