--- a/templates/gold_calculator.html
+++ b/templates/gold_calculator.html
@@ -50,17 +50,8 @@
             {% endif %}
         </form>
     </div>
-    <!-- Sidebar -->
-    <div class="sidebar">
-        <h2>Jeweler Details</h2>
-        <img src="{{ url_for('static', filename=config['JEWELLER_LOGO']) }}" alt="Jeweler Logo" class="img-fluid">
-        <p><strong>Name:</strong> {{ config["JEWELLER_NAME"] }}</p>
-        <p><strong>Address:</strong> {{ config["JEWELLER_ADDRESS"] }}</p>
-        <p><strong>Contact:</strong> {{ config["JEWELLER_CONTACT"] }}</p>
-        <p><strong>Email:</strong> {{ config["JEWELLER_EMAIL"] }}</p>
-        <p><strong>Website:</strong> {{ config["JEWELLER_WEBSITE"] }}</p>
-        <p><strong>GSTIN:</strong> {{ config["JEWELLER_GSTIN"] }}</p>
-        <p><strong>Gold Rate (Per gm):</strong> {{ currency_symbol }} {{ price_per_gram }}</p>
-    </div>
+    {% if is_gold_jewellers_sidebar %}
+        {% include 'ext/sidebar_jweller.html' %}
+    {% endif %}
 </div>
 {% endblock %}
