--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -45,7 +45,7 @@
         <h3><i class="fas fa-tools"></i> Admin Tools</h3>
         <div class="button-grid">
             <a href="{{ url_for('manage_users') }}" class="btn btn-large"><i class="fas fa-user-cog"></i> User Management</a>
-            <a href="{{ url_for('history') }}" class="btn btn-large"><i class="fas fa-history"></i> History</a>
+            <a href="{{ url_for('history') }}" class="btn btn-large"><i class="fas fa-history"></i>Transaction History</a>
             <a href="{{ url_for('settings') }}" class="btn btn-large"><i class="fas fa-cog"></i> System Settings</a>
             <a href="{{ url_for('audit_log') }}" class="btn btn-large"><i class="fas fa-clipboard-list"></i> Audit Logs</a>
         </div>
