feat: :sparkles: jewellers info is configurable

--- a/templates/gold_bill.html
+++ b/templates/gold_bill.html
@@ -51,6 +51,8 @@
         </div>
     </div>
     <!-- Sidebar -->
-    {% include 'ext/sidebar_jweller.html' %}
+    {% if settings.is_gold_jewellers_sidebar %}
+        {% include 'ext/sidebar_jweller.html' %}
+    {% endif %}
 </div>
 {% endblock %}
