--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -48,6 +48,7 @@
             <a href="{{ url_for('history') }}" class="btn btn-large"><i class="fas fa-history"></i>Transaction History</a>
             <a href="{{ url_for('settings') }}" class="btn btn-large"><i class="fas fa-cog"></i> System Settings</a>
             <a href="{{ url_for('audit_log') }}" class="btn btn-large"><i class="fas fa-clipboard-list"></i> Audit Logs</a>
+            <a href="{{ url_for('update_jeweller_details') }}" class="btn btn-large"><i class="fas fa-cog"></i>Jewellers Config Settings</a>
         </div>
     </div>
     <div class="admin-dashboard">
