--- a/templates/ext/sidebar_jweller.html
+++ b/templates/ext/sidebar_jweller.html
@@ -1,12 +1,11 @@
-<!-- Sidebar -->
 <div class="sidebar">
     <h2>Jeweler Details</h2>
-    <img src="{{ url_for('static', filename=config['JEWELLER_LOGO']) }}" alt="Jeweler Logo" class="img-fluid">
-    <p><strong>Name:</strong> {{ config["JEWELLER_NAME"] }}</p>
-    <p><strong>Address:</strong> {{ config["JEWELLER_ADDRESS"] }}</p>
-    <p><strong>Contact:</strong> {{ config["JEWELLER_CONTACT"] }}</p>
-    <p><strong>Email:</strong> {{ config["JEWELLER_EMAIL"] }}</p>
-    <p><strong>Website:</strong> {{ config["JEWELLER_WEBSITE"] }}</p>
-    <p><strong>GSTIN:</strong> {{ config["JEWELLER_GSTIN"] }}</p>
+    <img src="{{ url_for('static', filename=jeweller_details.jeweller_logo) }}" alt="Jeweler Logo" class="img-fluid">
+    <p><strong>Name:</strong> {{ jeweller_details.jeweller_name }}</p>
+    <p><strong>Address:</strong> {{ jeweller_details.jeweller_address }}</p>
+    <p><strong>Contact:</strong> {{ jeweller_details.jeweller_contact }}</p>
+    <p><strong>Email:</strong> {{ jeweller_details.jeweller_email }}</p>
+    <p><strong>Website:</strong> {{ jeweller_details.jeweller_website }}</p>
+    <p><strong>GSTIN:</strong> {{ jeweller_details.jeweller_gstin }}</p>
     <p><strong>Gold Rate (Per gm):</strong> {{ currency_symbol }} {{ price_per_gram }}</p>
 </div>
