--- a/templates/config.html
+++ b/templates/config.html
@@ -1,7 +1,7 @@
 {% extends 'base/base.html' %}
 {% block title %}Jeweller Details{% endblock %}
 {% block styles %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/config.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/settings.css') }}">
 {% endblock %}
 {% block content %}
 <div class="container">
@@ -59,7 +59,7 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <label for="jeweller_logo">Jeweller Logo</label>
-                    <input type="file" name="jeweller_logo" id="jeweller_logo" class="form-control">
+                    <input type="file" name="jeweller_logo" id="jeweller_logo" class="form-control-file">
                 </div>
             </div>
         </div>
